--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,40 +1,14 @@
-spring.application.name=api-avis-utilisateurs
-
-# Port du serveur
-server.port=8081
-
-
-# ##############Configuration de la connexion à la base de données###############
-#spring.datasource.url=jdbc:mysql://localhost:3306/utilisateurs-spring-db
-spring.datasource.url=jdbc:mariadb://localhost:3308/avis-utilisateurs-db
-spring.datasource.username=root
-spring.datasource.password=example
+spring.application.name=${APP_NAME}
+server.port=${SERVER_PORT}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-
-################# Configuration de JPA / Hibernate  ##############################
-# Met à jour le schéma de la base de données
 spring.jpa.hibernate.ddl-auto=update
-
-#spring.sql.init.mode=always
-
-# Affiche les requêtes SQL générées par Hibernate
 spring.jpa.show-sql=true
-
-# Formate les requêtes SQL pour les rendre lisibles
 spring.jpa.properties.hibernate.format_sql=true
-
-# Paramètres du logging
-#logging.level.org.springframework=INFO
-#logging.level.com.votreapp=DEBUG
-
-#spring.devtools.restart.enabled=true
-
-# Définir le chemin du contexte (contexte de l'URL de l'API)
 server.servlet.context-path=/frank-api
-
-#configuration du serveur de mail
-spring.mail.host=localhost
-spring.mail.port=9025
-
-spring.servlet.multipart.max-file-size=50GB
-spring.servlet.multipart.max-request-size=150GB
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE}
+spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE}
