--- a/.github/workflows/social-network.yml
+++ b/.github/workflows/social-network.yml
@@ -8,12 +8,13 @@ on:
       -main
 
 jobs:
-  runs-on: ubuntu-latest
+  build-and-push:
+    runs-on: ubuntu-latest
 
-  steps:
-    - name: recuperation du repository
-      uses: actions/checkout@v3
-      run: echo "code recupéré avec success"
+    steps:
+      - name: recuperation du repository
+        uses: actions/checkout@v3
+        run: echo "code recupéré avec success"
 
 
 
