--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-spring.application.name=${APP_NAME}
-server.port=${SERVER_PORT}
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.application.name=${APP_NAME:api-social-network}
+server.port=${SERVER_PORT:8081}
+spring.datasource.url=${DB_URL:jdbc:mariadb://localhost:3308/db-social-network}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:frank}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.servlet.context-path=/frank-api
-spring.mail.host=${MAIL_HOST}
-spring.mail.port=${MAIL_PORT}
-spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE}
-spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE}
+spring.mail.host=${MAIL_HOST:localhost}
+spring.mail.port=${MAIL_PORT:9025}
+spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE:50GB}
+spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE:150GB}
