--- a/.github/workflows/api-social-network.yml
+++ b/.github/workflows/api-social-network.yml
@@ -16,7 +16,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_TOKEN2 }}
 
       - name: Build and push docker image
         run: |
