implementation de l'envoi des mail par gmail et ajustement de docker compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,24 @@
 spring.application.name=${APP_NAME:api-social-network}
 server.port=${SERVER_PORT:8081}
-spring.datasource.url=${DB_URL:jdbc:mariadb://localhost:3308/db-social-network}
+spring.datasource.url=${DB_URL:jdbc:oracle:thin:@bdsocialnetwork_high?TNS_ADMIN=/src/main/resources/Wallet_bdsocialnetwork}
 spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:frank}
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.servlet.context-path=/frank-api
+
 spring.mail.host=${MAIL_HOST:localhost}
 spring.mail.port=${MAIL_PORT:9025}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE:50GB}
 spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE:150GB}
