--- a/pom.xml
+++ b/pom.xml
@@ -78,11 +78,6 @@
             <artifactId>spring-boot-starter-data-jdbc</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.mariadb.jdbc</groupId>
-            <artifactId>mariadb-java-client</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
             <version>0.11.5</version>
@@ -99,7 +94,12 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
-
+            <dependency>
+                <groupId>com.oracle.database.jdbc</groupId>
+                <artifactId>ojdbc8-production</artifactId>
+                <version>19.18.0.0</version>
+                <type>pom</type>
+            </dependency>
     </dependencies>
 
     <build>
