--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,56 +1,64 @@
 # Use root/example as user/password credentials
 
 services:
+  social-network-front:
+    image: franklamine/social-network
+    restart: always
+    ports:
+      - "80:80"
 
   api-social-network:
     image: franklamine/api-social-network:latest
     restart: always
     environment:
-      APP_NAME: api-social-network
+      APP_NAME: bdsocialnetwork
       SERVER_PORT: 8081
-      DB_URL: jdbc:mariadb://mariabd:3306/db-social-network
-      DB_USERNAME: root
-      DB_PASSWORD: frank
+      DB_URL: jdbc:oracle:thin:@bdsocialnetwork_high?TNS_ADMIN=/opt/oracle/wallet
+      DB_USERNAME: ADMIN
+      DB_PASSWORD: frankLAMINE2050
       MAIL_HOST: smtp4dev
       MAIL_PORT: 25
+      MAIL_USERNAME: fokamfranklamine@gmail.com
+      MAIL_PASSWORD: mpketfytanprtxky
       MAX_FILE_SIZE: 50GB
       MAX_REQUEST_SIZE: 150GB
     ports:
       - "8081:8081"
-    depends_on:
-      - mariabd
     dns:
       - 8.8.8.8
-
-  mariabd:
-    container_name: mariabd-11.8.1-noble-rc
-    image: mariadb:11.8.1-noble-rc
-    restart: always
-    environment:
-      MARIADB_ROOT_PASSWORD: frank
-      MARIADB_DATABASE: db-social-network
-    ports:
-      - "3308:3306"
     volumes:
-      - volume-social-network:/var/lib/mysql
+      - ./Wallet_bdsocialnetwork:/opt/oracle/wallet
 
-  adminer:
-    container_name: adminer-5.3.0-standalone
-    image: adminer:5.3.0-standalone
-    restart: always
-    ports:
-      - "9080:8080"
 
-  smtp4dev:
-    image: rnwood/smtp4dev:v3
-    restart: always
-    ports:
-      # Change the number before : to the port the web interface should be accessible on
-      - '9081:80'
-      # Change the number before : to the port the SMTP server should be accessible on
-      - '9025:25'
-      # Change the number before : to the port the IMAP server should be accessible on
-      #- '143:143'
-
-volumes:
-  volume-social-network:
+#  mariabd:
+#    container_name: mariabd-11.8.1-noble-rc
+#    image: mariadb:11.8.1-noble-rc
+#    restart: always
+#    environment:
+#      MARIADB_ROOT_PASSWORD: frank
+#      MARIADB_DATABASE: db-social-network
+#    ports:
+#      - "3308:3306"
+#    volumes:
+#      - volume-social-network:/var/lib/mysql
+#
+#  adminer:
+#    container_name: adminer-5.3.0-standalone
+#    image: adminer:5.3.0-standalone
+#    restart: always
+#    ports:
+#      - "9080:8080"
+#
+#  smtp4dev:
+#    image: rnwood/smtp4dev:v3
+#    restart: always
+#    ports:
+#      # Change the number before : to the port the web interface should be accessible on
+#      - '9081:80'
+#      # Change the number before : to the port the SMTP server should be accessible on
+#      - '9025:25'
+#      # Change the number before : to the port the IMAP server should be accessible on
+#      #- '143:143'
+#
+#volumes:
+#  volume-social-network:
