--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
                 <version>19.18.0.0</version>
                 <type>pom</type>
             </dependency>
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http45</artifactId>
+            <version>1.39.0</version>
+        </dependency>
     </dependencies>
 
     <build>
