--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,12 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
+
+cloudinary.cloud_name=${CLOUDINARY_NAME}
+cloudinary.api_key=${CLOUDINARY_API_KEY}
+cloudinary.api_secret=${CLOUDINARY_SECRET_KEY}
+
+
+
 spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE:50GB}
 spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE:150GB}
