--- a/.github/workflows/api-social-network.yml
+++ b/.github/workflows/api-social-network.yml
@@ -37,4 +37,4 @@ jobs:
           port: 22
           script: |
             docker compose pull
-            docker compose up -d
+            docker compose up -d api-social-network
